ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mirth-ingress
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /mirth
        pathType: Prefix
        backend:
          service:
            name: connect-service
            port:
              number: 8080
